# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: CMakeLists.txt  friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
